--- a/atv-react-ui-libs/package.json
+++ b/atv-react-ui-libs/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "antd": "^5.21.6",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
+    "@types/moment": "^2.13.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
